<resources>
    <string name="app_name">Auth</string>
    <string name="move_with_new">Start moving with \nthe new</string>
    <string name="hint_mobile_number">Enter Your Mobile number</string>
    <string name="one_time_password">One-Time Password</string>
    <string name="resend_otp_email_message_formatter">Your account on %s has not been verified. Input your phone number linked to the account and verify your account</string>
    <string name="otp_confirm_formatter">Kindly Check Your Phone %s for your OTP</string>
    <string name="button_confirm">Confirm</string>
    <string name="next_button_text">Next</string>
    <string name="resend_pin_text">Resend Pin</string>
    <string name="button_done">Done</string>
    <string name="set_up_your_account_text">Set up your account</string>
    <string name="upload_profile_image_text">Upload Profile Image</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="otp_text">OTP</string>
    <string name="call_me_text">Call me</string>
    <string name="verify_your_identity">Verify your Identity</string>
    <string name="hint_email">Email</string>
    <string name="reg_hint_mobile_number">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer mollisus.</string>
    <string name="button_skip_text">Skip</string>
    <string name="button_finish_text">Finish</string>
    <string name="mobile_number_text">Mobile Number</string>
    <string name="nigeria_format">+234</string>
    <string name="none">none</string>
    <string name="btn_get_started_text">Get Started</string>
    <string name="btn_sure_go_ahead_text">Sure, go ahead!</string>
    <string name="enjoy_life_text">Are you ready to enjoy a\nlife without limits?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_btn">Next</string>
    <string name="skip">Skip</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="welcome_to_financial_freedom">Welcome to Financial Freedom</string>
    <string name="get_started">Get Started</string>
    <string name="new_here_signup">New here? Signup</string>
    <string name="sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email_phone_number_username">Email/Phone number/Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_pin">Forgot Pin?</string>
    <string name="register">Register</string>
    <string name="by_signing_up_you_agree_with_the_terms_and_coditions">By signing up, you agree with the terms and coditions</string>
    <string name="surname">Surname</string>
    <string name="firstname">First Name</string>
    <string name="your_firstname">Your First-Name</string>
    <string name="your_surname">Your Surname</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="register_cont">Register cont.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="explanation">Password must be at least 8 character and contain 1 Number, Special case, Upper case and Lower case</string>
    <string name="enter_your_secure_pin">Enter your secure pin</string>
    <string name="verify_your_account">Verify your Account</string>
    <string name="an_otp_has_been_sent">A one time verification code has been sent to your number/mail.</string>
    <string name="verify">Verify</string>
    <string name="create_pin">Create a secure pin</string>
    <string name="keep_your_pin">Keep your account safe with a secure pin</string>
    <string name="input_pin">Input PIN</string>
    <string name="confirm_pin">Confirm new PIN</string>
    <string name="cont">Continue</string>
    <string name="pin_set">Your PIN is set</string>
    <string name="you_can_sign_in_with_pin">You can sign in and out of your account with your secure PIN</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enter_your_details">Please enter your details, we will send you a verification code to reset your password</string>
    <string name="email_phone_number">Email/Phone Number</string>
    <string name="enter_otp">Enter OTP Code</string>
    <string name="we_have_sent_a_verification_code_for_you_to_reset_your_password">We have sent a verification code for you to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="Successful">Successful</string>
    <string name="your_password_has_been_reset_successfully">Your Password has been reset successfully</string>
    <string name="login">Login</string>
    <string name="buy">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="update_profile">Update Profile</string>
    <string name="save">Save</string>
    <string name="upload_profile_image">Upload Profile Image</string>
    <string name="middle_name">Middle Name</string>
    <string name="date_of_birth">Date of Birth (22/12/2020)</string>
    <string name="gender">Gender</string>
    <string name="district_state">District/State</string>
    <string name="address">Address</string>
    <string name="bvn">Bank Verification Number (BVN)</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_account_number">Account Number</string>
    <string name="logout">LOGOUT</string>
    <string name="my_fullname">My FullName</string>
    <string name="earn_with_wayapaychat">Earn with WayaPaychat</string>
    <string name="my_account">My Account</string>
    <string name="discover_people">Discover People</string>
    <string name="create_group_and_page">Create Group and Page</string>
    <string name="qr_code">QR Code</string>
    <string name="interests">Interests</string>
    <string name="settings">Settings</string>
    <string name="faq">FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="wallet">Wallet</string>
    <string name="notifications">Notifications</string>
    <string name="activity">Activity</string>
    <string name="t1_text">T1: Upgrade your account to perform large transactions</string>
    <string name="edit_profile_description">Profile image, name  e.t.c</string>
    <string name="other_details">Other Details</string>
    <string name="other_details_description">Address, Email</string>
    <string name="credentials">Credentials</string>
    <string name="credentials_description">International passport, BVN, ID Card, NIN</string>
    <string name="login_information">Login Information</string>
    <string name="login_information_description">Location, device, time of login</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="previous_password">Enter previous password</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="check_one_of_inputs">Please check your inputs to be sure they are correct</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="device">Device</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="airtime">Airtime</string>
    <string name="data">Data</string>
    <string name="utility_bills">Utility Bills</string>
    <string name="bet">Betting</string>
    <string name="transfer_funds">Send</string>
    <string name="receive_funds">Receive</string>
    <string name="withdraw_funds">Withdraw</string>
    <string name="payment_request">Request</string>
    <string name="create_new_wallet">Create new wallet account</string>
    <string name="link_card_bank">Link Card</string>
    <string name="view_link_cards">view linked cards</string>
    <string name="view_link_banks">View linked banks</string>
    <string name="link_bank">Link Bank</string>
    <string name="link_bvn">Link BVN</string>
    <string name="disable_wallet">Disable Wallet</string>
    <string name="all_wallet">View Wallets</string>
    <string name="fund_wallet">Fund Wallet</string>
    <string name="bank_card">Bank Card</string>
    <string name="pay_merchant">Pay Merchant</string>
    <string name="personal_account_transfer">Personal Account</string>
    <string name="bank_account">Bank Account</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="ussd">USSD</string>
    <string name="single_string_concat">%s</string>
    <string name="name">Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="cvv">CVV</string>
    <string name="add_card">Add Card</string>
    <string name="deduct_message"> Dear customer, a charge of N10 will be deducted from your card to validate it’s authenticity. The money deducted will be added back to your wallet</string>
    <string name="note">Note</string>
    <string name="create_wallet_message">Are you sure you want to create another wallet account?</string>
    <string name="finish">Finish</string>
    <string name="select_bank">Select Bank</string>
    <string name="account_name">Account Name</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="input_your_4_digit_pin">Input your 4 digit pin</string>
    <string name="scan_the_qr_code_to_pay_me">Scan the QR Code to pay me</string>
    <string name="share_qr_code">Share QR Code</string>
    <string name="dowload">Download</string>
    <string name="print">Print</string>
    <string name="top_up_amount">Top-up Amount</string>
    <string name="top_up_wallet">Top-up Wallet</string>
    <string name="top_up">Top up</string>
    <string name="dial_ussd_code">Dial USSD Code</string>
    <string name="discover_connect_and_transact_with_wayapay_chat">Discover, Connect and Transact with Wayapay Chat</string>
    <string name="cooperate_account">Cooperate account</string>
    <string name="personal_account">Personal account</string>
    <string name="city">City</string>
    <string name="office_address">Office Address</string>
    <string name="chat_calls">Chats/Calls</string>
    <string name="bookmarked_post">Bookmarked Post</string>
    <string name="payment_settings">Payment Settings</string>
    <string name="manage_wallets">Manage Wallets</string>
    <string name="manage_cards">Manage Cards</string>
    <string name="manage_banks">Manage Banks</string>
    <string name="you_can_now_login_with_your_email_and_password">Your account has been setup successfully. \nYou can now login with your email and password</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="your_pin_has_been_changed_successfully_you_can_login_with_your_new_pin">Your pin has been changed successfully. You can login with your new pin</string>
</resources>