<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/landingFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/discover"
        android:icon="@drawable/ic_discover_compass"
        android:title="@string/discover" />

    <item
        android:id="@+id/wallet"
        android:icon="@drawable/ic_fancy_wallet"
        android:title="@string/wallet" />
    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />
    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_baseline_chat_bubble_outline_24"
        android:title="@string/chat_calls" />
    
</menu>
