<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="36dp"
        android:fillViewport="true"
        tools:context=".presentation.fragments.AccountCreationSuccessFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/top_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_check"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/congratulations"
                android:textColor="@color/primary_text_color"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_marginTop="36dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/you_can_now_login_with_your_email_and_password"/>

            <Button
                android:id="@+id/back_to_log_in_button"
                android:layout_marginTop="36dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"/>
        </LinearLayout>

    </ScrollView>
</layout>