<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/dimen_20">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_50"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/bouncing_logo" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_40"
                android:fontFamily="@font/libre_baskerville"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="@+id/logo"
                app:layout_constraintRight_toRightOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@+id/logo" />


            <LinearLayout
                android:id="@+id/options"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30"
                android:background="@color/bar_color"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title">


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/merchant_btn"
                    android:layout_width="@dimen/dimen_160"
                    android:layout_height="@dimen/dimen_40"
                    android:elevation="@dimen/dimen_2"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/cooperate_account"
                    android:textAllCaps="false"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/user_btn"
                    android:layout_width="@dimen/dimen_160"
                    android:layout_height="@dimen/dimen_40"
                    android:elevation="@dimen/dimen_2"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/personal_account"
                    android:textAllCaps="false"
                    android:textSize="14sp" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstname_business_name_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:hint="@string/your_firstname"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/options">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstname_business_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/dimen_1"
                    android:paddingLeft="@dimen/dimen_1">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surname_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:hint="@string/your_surname"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstname_business_name_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/dimen_1"
                    android:paddingLeft="@dimen/dimen_1">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/state_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:hint="@string/district_state"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/surname_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingStart="@dimen/dimen_1"
                    android:paddingLeft="@dimen/dimen_1">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:hint="@string/city"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/state_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingStart="@dimen/dimen_1"
                    android:paddingLeft="@dimen/dimen_1">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/office_address_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_20"
                android:hint="@string/office_address"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/office_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingStart="@dimen/dimen_1"
                    android:paddingLeft="@dimen/dimen_1">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <include
                android:id="@+id/sign_up_btn"
                layout="@layout/reusable_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_10"
                app:buttonText="@{@string/next}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/office_address_container" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/term_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/lato_regular"
                android:text="@string/by_signing_up_you_agree_with_the_terms_and_coditions"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sign_up_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
